snipdoc/src/db/snapshots/snipdoc__db__tests__can_get_snippet_content_with_template_action.snap
---
source: snipdoc/src/db/mod.rs
expression: snippet.get_content(&action)
---
[
    "```sh",
    "$ cargo install snipdoc",
    "$ snipdoc --version",
    "```",
]
