snipdoc/src/db/snapshots/snipdoc__db__tests__can_get_snippet_content_without_action.snap
---
source: snipdoc/src/db/mod.rs
expression: snippet.get_content(&action)
---
[
    "$ cargo install snipdoc",
    "$ snipdoc --version",
]
