snipdoc/src/db/snapshots/snipdoc__db__tests__can_get_snippet_with_exec_action_with_template.snap
---
source: snipdoc/src/db/mod.rs
expression: snippet.get_content(&action)
---
[
    "```sh",
    "calc result: 2",
    "",
    "```",
]
